--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -9,7 +9,7 @@
 
 	<h1 class="headline">EDIT ITEM</h1>
 
-	<div><%= link_to "Manage Images for this Item", "/items/#{@item.id}/images" %></div>
+	<div><h4><%= link_to "Manage Images for this Item", "/items/#{@item.id}/images" %></h4></div>
 
 	<div id="edit-item-form">
 
