--- a/app/assets/stylesheets/images.scss
+++ b/app/assets/stylesheets/images.scss
@@ -49,7 +49,8 @@
 	};
 
 	#image-container {
-		width: 80%;
+		width: 95%;
+		float: center;
 		margin-top: 40px;
 		margin-left: auto;
 		margin-right: auto;
@@ -66,15 +67,78 @@
 			color: red;
 		};
 
+		h4 {
+			color: red;
+			letter-spacing: 0.1em;
+			text-align: center;
+		};
+
+		form {
+			width: 100%;
+			text-align: left;
+		};
+
+		input[type=text] {
+			font-family: 'Courier';
+			width: 1000px;
+		};
+
+		input[type=submit].delete {
+			display: inline-block;
+			float: right;
+			color: red;
+			margin-top: -28px;
+		};
+
 	};
 
 	.image-view {
-		width: 500px;
-		height: 400px;
-		margin-top: 10px;
-		margin-right: 20px;
-
+		max-width: 100%;
+		float: center;
+		margin-top: 5px;
+		margin-left: auto;
+		margin-right: auto;
+		margin-bottom: 50px;
+		background-color: rgba(200,200,200,1);
+		border: solid black 1px;
 	};
+
+	#upload {
+		width: 50%;
+		float: center;
+		margin-top: 50px;
+		margin-left: auto;
+		margin-right: auto;
+		border: solid black 1px;
+		padding: 10px;
+
+		input[type=file] {
+			width: 40%;
+			float: center;
+			margin-left: auto;
+			margin-right: auto;
+			font-family: 'Courier';
+			text-align: center;
+			margin-top: 20px;
+		};
+
+		input[type=text] {
+			width: 90%;
+			font-family: 'Courier';
+			text-align: left;
+			margin-top: 20px;
+		};
+
+		input[type=submit] {
+			margin-top: 20px;
+		};
+
+		.file-upload {
+			margin-bottom: 20px;
+
+		}
+
+	}
 
 
 };
