--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,4 +1,4 @@
-<body class="image">
+<body class="image" id="image">
 
 <% if (session[:is_admin] != 'true') %>
 	<h2>Sorry, you do not have permission to access this page.</h2>
@@ -12,19 +12,35 @@
 	<h5>- FOR -</h5>
 
 	<h3><%= @item.caption %></h3>
+	<h5><%= @item.code %></h5>
+	<br>
 
-	<%= link_to "Upload New Image", "/items/#{@item.id}/images/new" %>
+	<h4><%= link_to "Upload New Image", "/items/#{@item.id}/images/new" %></h4>
 
 	<div id="image-container">
 
-			<% @item.images.each do |image| %>
+		<% @item.images.order(:id).each_with_index do |image, i| %>
+			<div>
+				<h4>IMAGE <%= i+1 %>:</h4>
+				<form action="/items/<%= @item.id %>/images/<%= image.id %>" method="post">
+					<label for="caption">CAPTION: <input type="text" name="caption" value="<%= image.caption %>"/></label>
+					<input type="submit" class="update_caption" id="item_<%= @item.id %>_img_<%= image.id %>"value="Update"/>
+					<input type="hidden" name="_method" value="patch"/>
+					<input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>" />
+				</form>
 
-				<div class="image-view"><a href="/images/<%= image.id %>">	
-					<h5><%= image.caption %></h5>	
-					<%= image_tag image.image.thumb('500x400#').url if image.image_stored? %>
-				</a></div>
+				<form action="/items/<%= @item.id %>/images/<%= image.id %>" method="post">
+					<input type="submit" class="delete" id="item_<%= @item.id %>_img_<%= image.id %>"value="Delete Image"/>
+					<input type="hidden" name="_method" value="delete"/>
+					<input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>" />
+				</form>
+			
+				<div class="image-view">
+					<%= image_tag image.image.url if image.image_stored? %>
+				</div>
+			</div>
 
-			<% end %>
+		<% end %>
 
 	</div>
 
