--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,7 +1,7 @@
 <body class="item">
 <% if (session[:is_admin] == 'true') %>
 
-	<h5 class="topnav">You are logged in as: <%= session[:user_name] %> | <a href="/">HOME</a> | <a href="/items/new">ADD NEW ITEM</a></h5>
+	<h5 class="topnav">You are logged in as: <%= session[:user_name] %> | <a href="/">HOME</a> | <a href="/items/new">ADD NEW ITEM</a> | <a href="/admin">ADMIN CENTER</a></h5>
 
 <% else %>
 	<h5 class="topnav"><a href="/">HOME</a></h5>
