--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,7 +1,7 @@
 @media (min-width: 770px) {
 
 	body.welcome {
-		background-image: url('http://www.neti-netisoccer.com/ebay/antiquela-1435251927-5711.jpg');
+		background-image: url("background.jpg");
 		background-repeat: no-repeat;
 		background-size: 100%;
 		font-family: 'Cinzel', serif;
@@ -68,11 +68,11 @@
 	};
 
 	#categories {
-		width: 300px;
+		width: 20%;
 		height: 440px;
 		float: left;
 		margin-top: 170px;
-		margin-left: 250px;
+		margin-left: 16%;
 		padding-bottom: 20px;
 		background-color: rgba(255,255,255,0.9);
 
@@ -105,11 +105,11 @@
 	};
 
 	#keywords {
-		width: 300px;
+		width: 20%;
 		height: 440px;
 		float: right;
 		margin-top: 170px;
-		margin-right: 250px;
+		margin-right: 16%;
 		background-color: rgba(255,255,255,0.9);
 		text-align: center;
 
@@ -332,15 +332,39 @@
 			margin-left: auto;
 			margin-right: auto;
 			border: solid black 1px;
-		}
+		};
 
 	};
 
 	#manage-items {
 		width: 40%;
-		height: 290px;
+		height: 185px;
 		float: left;
 		margin-top: 100px;
+		margin-left: 2%;
+		background-color: rgba(255,255,255,0.9);
+
+		h4 {
+			color: black;
+			letter-spacing: 0.1em;
+		};
+
+		#find-item {
+			label {
+				margin-right: 5px;
+			}
+			input[type=text] {
+				font-family: 'Courier';
+			};
+		};
+
+	};
+
+	#admin-profile {
+		width: 40%;
+		height: 150px;
+		float: left;
+		margin-top: 20px;
 		margin-left: 2%;
 		background-color: rgba(255,255,255,0.9);
 
@@ -352,7 +376,7 @@
 
 	#google-analytics {
 		width: 40%;
-		height: 290px;
+		height: 225px;
 		float: left;
 		margin-top: 20px;
 		margin-left: 2%;
