working on user add, update, password change

--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -119,7 +119,7 @@
 
 		#submit {
 			text-align: center;
-		}
+		};
 
 		label {
 			width: 25%;
@@ -168,7 +168,6 @@
 
 		.short {
 			width: 30px;
-			color: 'green';	
 		};	
 
 	};
