--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,10 +1,69 @@
-<body class="users">
+<body class="users" id="user">
 
-	<h1>Edit User Page</h1>
+<% if (session[:is_admin] != 'true') %>
+	<div id="header">
+		<h2>Sorry, you do not have permission to access this page.</h2>
+		<h4>Please <a href="/login">login</a> to continue</h4>
+	</div>
+<% else %>
+	<div id="header">
+		<h5 class="topnav" id="admin">You are logged in as: <%= session[:user_name] %> | <a href="/">HOME</a> | <a href="/users">USERS</a> | <a href="/admin">ADMIN CENTER</a></h5>
+		<h1>USER PROFILE</h1>
+	</div>
 
+	<div id="user-form">
 
+		<%= form_for @user, url: {action: "update"} do |f| %>
+			
+			<%= f.label :first_name, "First Name" %>
+			<%= f.text_field :first_name %><br>
+			<%= f.label :last_name, "Last Name" %>
+			<%= f.text_field :last_name %><br>
+			<%= f.label :email, "Email" %>
+			<%= f.text_field :email %><br>
 
+			<%= f.label :is_admin, "Administrator?" %>
+			<%= f.radio_button(:is_admin, "true") %>
+			<%= f.label(:is_admin, "Yes", {:class => "short"}) %>
+			<%= f.radio_button(:is_admin, "false") %>
+			<%= f.label(:is_admin, "No", {:class => "short"}) %><br>
 
+			<%= f.label :is_active, "Active?" %>
+			<%= f.radio_button(:is_active, "true") %>
+			<%= f.label(:is_active, "Yes", {:class => "short"}) %>
+			<%= f.radio_button(:is_active, "false") %>
+			<%= f.label(:is_active, "No", {:class => "short"}) %><br>
+			
+			
+			<div id="submit"><%= f.submit "Update", {:class => "update-user"}  %></div>
+		<% end %>
+
+	</div>
+
+	<div id="change-password">
+
+		<%= form_for(@user, :url => "/change_password") do |f| %>
+
+		  <%= hidden_field(:user, :email, :value => @user.email) %>
+
+				<%= f.label :password %>
+			  <%= f.password_field(:password, :class => "") %>
+		    <%= f.label :new_password %>
+		    <%= f.password_field(:new_password, :class => "") %>
+				<%= f.label :new_password_confirmation %>
+				<%= f.password_field(:new_password_confirmation, :class => "") %>   
+
+	    	<div id="submit">
+	    		<%= f.submit "Change Password", {:class => "button"}  %>
+	    	</div>
+
+	    	<h5 id="message"><%= @message %></h5>
+
+		<% end %>
+
+	</div>
+
+<% end %>
 
 
 </body>
