--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -77,7 +77,7 @@ $bg-color: rgba(255,255,255,0.9);
 		margin-left: auto;
 		margin-right: auto;
 		padding: 10px 20px;
-		text-align: left;
+		text-align: center;
 		color: black;
 		background-color: $bg-color;
 
@@ -88,16 +88,160 @@ $bg-color: rgba(255,255,255,0.9);
 
 		table {
 			width: 90%;
+			margin-top: 20px;
 			margin-left: auto;
 			margin-right: auto;
 			text-align: left;
 
 			th {
-				font-size: 18px;
-			}
+				font-size: 16px;
+			};
+		};
+	};
+
+	#new-user-form {
+		width: 40%;
+		height: 350px;
+		float: center;
+		margin-top: 200px;
+		margin-left: auto;
+		margin-right: auto;
+		padding: 10px 50px;
+		text-align: left;
+		color: black;
+		background-color: $bg-color;
+
+		#submit {
+			margin-top: 15px;
+			text-align: center;
+		};
+
+		label {
+			width: 30%;
+			text-align: right;
+			margin-top: 10px;
+			margin-right: 5px;
+		};
+
+		input[type=text] {
+			width: 60%;
+			margin-top: 10px;
+			text-align: left;
+			font-family: 'Courier';
+		};
+
+		input[type=text].short {
+			width: 30%;
+			margin-top: 5px;
+			font-family: 'Courier';
+		};
+
+		input[type=radiobutton] {
+			width: 10px;
+			margin-top: 5px;
+		};
+
+		.short {
+			width: 30px;
+		};	
+
+	};
+
+	#user-form {
+		width: 40%;
+		height: 250px;
+		float: center;
+		margin-top: 200px;
+		margin-left: auto;
+		margin-right: auto;
+		padding: 10px 50px;
+		text-align: left;
+		color: black;
+		background-color: $bg-color;
+
+		#submit {
+			margin-top: 15px;
+			text-align: center;
+		};
+
+		label {
+			width: 30%;
+			text-align: right;
+			margin-top: 10px;
+			margin-right: 5px;
+		};
+
+		input[type=text] {
+			width: 60%;
+			margin-top: 10px;
+			text-align: left;
+			font-family: 'Courier';
+		};
+
+		input[type=text].short {
+			width: 30%;
+			margin-top: 5px;
+			font-family: 'Courier';
+		};
+
+		input[type=radiobutton] {
+			width: 10px;
+			margin-top: 5px;
+		};
+
+		.short {
+			width: 30px;
+		};	
+
+	};
+
+	#change-password {
+		width: 40%;
+		height: 180px;
+		float: center;
+		margin-top: 20px;
+		margin-left: auto;
+		margin-right: auto;
+		margin-bottom: 20px;
+		padding: 10px 50px;
+		text-align: left;
+		color: black;
+		background-color: $bg-color;
+
+		#submit {
+			margin-top: 15px;
+			text-align: center;
+		};
+
+		label {
+			width: 50%;
+			text-align: right;
+			margin-top: 10px;
+			margin-right: 5px;
+		};
+
+		input[type=text] {
+			width: 40%;
+			margin-top: 10px;
+			text-align: left;
+			font-family: 'Courier';
+		};
+
+		input[type=text].short {
+			width: 30%;
+			margin-top: 5px;
+			font-family: 'Courier';
+		};
+
+		#message {
+			font-size: 12px;
+			text-align: center;
+			font-family: 'Courier';
+			color: red;
 		}
 
-	}
+	};
+
 
 
 };
