--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -11,7 +11,7 @@
 		<h1>USER PROFILE</h1>
 	</div>
 
-	<div id="user-form">
+	<div class="user-form" id="user_<%= @user.id %>">
 
 		<%= form_for @user, url: {action: "update"} do |f| %>
 			
