--- a/app/views/welcome/admin.html.erb
+++ b/app/views/welcome/admin.html.erb
@@ -128,7 +128,7 @@
 		<h4>YOUR PROFILE</h4>
 		<h5><%= @first_name %> <%= @last_name %></h5>
 		<h5><%= @email %></h5>
-		<h5><a href="/users/<%= session[:user_id] %>">EDIT MY PROFILE</a></h5>
+		<h5><a href="/users/<%= session[:user_id] %>/edit">EDIT MY PROFILE</a></h5>
 		<h5><a href="/users">MANAGE USERS</a></h5>
 	</div>
 
