ajax calls for user and password update

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -202,9 +202,9 @@ $bg-color: rgba(255,255,255,0.9);
 
 	};
 
-	#change-password {
+	.change-password {
 		width: 40%;
-		height: 180px;
+		height: 160px;
 		float: center;
 		margin-top: 20px;
 		margin-left: auto;
