added delete route for items

--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -172,7 +172,7 @@
 
 	};
 
-	#edit-item-form {
+	.edit-item-form {
 		width: 40%;
 		height: 500px;
 		float: left;
@@ -236,6 +236,14 @@
 			width: 30px;
 			color: 'green';	
 		};	
+
+		input[type=submit].delete {
+			width: 120px;
+			float: right;
+			color: red;
+			margin-top: -25px;
+			margin-right: 20px;
+		}
 
 	};
 
