--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -5,7 +5,7 @@
 	<h4>Please <a href="/login">login</a> to continue</h4>
 <% else %>
 
-	<h5 class="topnav">You are logged in as: <%= session[:user_name] %> | <a href="/">HOME</a> | <a href="/items/<%= @item.id %>/edit">BACK TO EDIT</a></h5>
+	<h5 class="topnav">You are logged in as: <%= session[:user_name] %> | <a href="/">HOME</a> | <a href="/items/<%= @item.id %>/edit">EDIT ITEM</a></h5>
 
 	<h1 class="headline">IMAGES</h1>
 
