--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -21,19 +21,32 @@
 
 		<% @item.images.order(:id).each_with_index do |image, i| %>
 			<div>
-				<h4>IMAGE <%= i+1 %>:</h4>
-				<form action="/items/<%= @item.id %>/images/<%= image.id %>" method="post">
+				<h4>IMAGE <%= i+1 %></h4>
+				<% if (!(@item.thumb_image_id) && (i==0)) %>
+					<h5>[DEFAULT THUMB]</h5>
+				<% elsif (@item.thumb_image_id == image.id) %>
+					<h5>[CURRENT THUMBNAIL]</h5>
+				<% else %>
+					<div class="change-thumb"><form action="/items/<% @item.id %>/set_thumb" method="post">
+						<input type="submit" class="set-thumb" value="SET AS THUMBNAIL"/>
+						<input type="hidden" name="image_id" value="<%= image.id %>"/>
+						<input type="hidden" name="_method" value="patch"/>
+						<input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>" />
+					<form></div>
+				<% end %>
+
+				<div class="caption"><form action="/items/<%= @item.id %>/images/<%= image.id %>" method="post">
 					<label for="caption">CAPTION: <input type="text" name="caption" value="<%= image.caption %>"/></label>
 					<input type="submit" class="update_caption" id="item_<%= @item.id %>_img_<%= image.id %>"value="Update"/>
 					<input type="hidden" name="_method" value="patch"/>
 					<input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>" />
-				</form>
+				</form></div>
 
-				<form action="/items/<%= @item.id %>/images/<%= image.id %>" method="post">
+				<div><form action="/items/<%= @item.id %>/images/<%= image.id %>" method="post">
 					<input type="submit" class="delete" id="item_<%= @item.id %>_img_<%= image.id %>"value="Delete Image"/>
 					<input type="hidden" name="_method" value="delete"/>
 					<input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>" />
-				</form>
+				</form></div>
 			
 				<div class="image-view">
 					<%= image_tag image.image.url if image.image_stored? %>
