--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -388,6 +388,18 @@
 		};
 	};
 
+	#error {
+		width: 80%;
+		margin-top: 50px;
+		margin-left: auto;
+		margin-right: auto;
+		margin-bottom: 20px;
+		text-align: center;
+		font-size: 18px;
+		background-color: rgba(255,255,255,0.9);
+		padding: 20px;
+	};
+
 };
 
 
