--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -42,41 +42,17 @@
   </a>
 </div>
 
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-65314911-1', 'auto');
+  ga('send', 'pageview');
 
-
-<!-- <div id="item-thumbs-container">
-
-	<h4>IMAGES</h4>
-
-	<div id="item-thumbs">
-
-	
-
-	</div>
-
-<div> -->
-
-
+</script>
 
 <div>
 
-
-
 </body>
-<!-- 
-#  id             :integer          not null, primary key
-#  code           :string
-#  caption        :string           not null
-#  description    :string
-#  purchase_price :integer
-#  selling_price  :integer
-#  is_available   :boolean          default(TRUE), not null
-#  condition      :string
-#  measurements   :string
-#  date_acquired  :date
-#  date_sold      :date
-#  created_at     :datetime
-#  updated_at     :datetime
-#  thumb_image_id :integer
-# -->
