uploaded background image to s3 bucket

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,7 +1,7 @@
 @media (min-width: 770px) {
 
 	body.welcome {
-		background-image: url("./background.jpg");
+		background-image: url("https://s3.amazonaws.com/maria-niforos-antiques/background.jpg");
 		background-repeat: no-repeat;
 		background-size: 100%;
 		font-family: 'Cinzel', serif;
