updated background url for users page

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -3,7 +3,7 @@ $bg-color: rgba(255,255,255,0.9);
 @media (min-width: 770px) {
 
 	body.users {
-		background-image: url("background.jpg");
+		background-image: url("https://s3.amazonaws.com/maria-niforos-antiques/background.jpg");
 		background-repeat: no-repeat;
 		background-size: 100%;
 		font-family: 'Cinzel', serif;
