--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,7 +6,7 @@
 
 <div id="categories">
 
-	<h5>Browse by Category</h5>
+	<h5>Browse</h5>
 
 	<div id="cat-list">
 
@@ -22,7 +22,7 @@
 
 <div id="keywords">
 
-	<h5>Search by Keywords</h5>
+	<h5>Search</h5>
 
 	<form action="/items" method="get">
 		<div id="key-list">
