--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,504 +1,417 @@
-@media (min-width: 770px) {
+body.welcome {
+	background-image: url("https://s3.amazonaws.com/maria-niforos-antiques/background.jpg");
+	background-repeat: no-repeat;
+	background-size: 100%;
+	font-family: 'Cinzel', serif;
+	text-align: center;
 
-	body.welcome {
-		background-image: url("https://s3.amazonaws.com/maria-niforos-antiques/background.jpg");
-		background-repeat: no-repeat;
-		background-size: 100%;
-		font-family: 'Cinzel', serif;
+	.topnav {
+		font-size: 16px;
+		line-height: 20px;
 		text-align: center;
 
-		.topnav {
-			font-size: 16px;
-			line-height: 20px;
-			text-align: center;
-
-			a {
-				color: white;
-			};
-
-			a:hover {
-				color: white;
-			};
-
-			a:visited {
-				color: white;
-			};
-
+		a {
+			color: white;
 		};
 
-		#admin {
-
-			color: black;
-
-			a {
-				color: red;
-			};
-
-			a:hover {
-				color: red;
-			};
-
-			a:visited {
-				color: red;
-			};
-
-		};
-	};
-
-	#header {
-		width: 100%;
-		border: 0;
-		background-color: rgba(255,255,255,0.9);
-		position: absolute;
-		top: 0;
-
-		h1 {
-			line-height: 50px;
-			font-size: 48px;
-			letter-spacing: 0.2em;
+		a:hover {
+			color: white;
 		};
 
-		h3 { 
-			line-height: 20px;
-			font-size: 20px;
-			color: red;
-			letter-spacing: 0.2em;
+		a:visited {
+			color: white;
 		};
 
 	};
 
-	#categories {
-		width: 20%;
-		height: 440px;
-		float: left;
-		margin-top: 170px;
-		margin-left: 16%;
-		padding-bottom: 20px;
-		background-color: rgba(255,255,255,0.9);
+	#admin {
 
-		h5 {
-			line-height: 40px;
-			font-size: 16px;
-			color: red;
-			font-weight: 700;
-			letter-spacing: 0.075em;
-		};
-
-		#cat-list {
-			width: 90%;
-			margin-left: auto;
-			margin-right: auto;
-			height: 360px;
-			overflow: scroll;
-		};
-
-		p {
-			font-size: 16px;
-			letter-spacing: 0.075em;
-
-			a {
-				color: black;
-			};
-
-		};
-
-	};
-
-	#keywords {
-		width: 20%;
-		height: 440px;
-		float: right;
-		margin-top: 170px;
-		margin-right: 16%;
-		background-color: rgba(255,255,255,0.9);
-		text-align: center;
-
-		h5 {
-			text-align: center;
-			line-height: 40px;
-			font-size: 16px;
-			color: red;
-			font-weight: 700;
-			letter-spacing: 0.075em;
-		};
-
-		#key-list {
-			width: 90%;
-			text-align: left;
-			margin-left: auto;
-			margin-right: auto;
-			height: 320px;
-			overflow: scroll;
-		};
-
-		input[type=checkbox] {
-			margin-left: 20%;
-			text-align: left;
-			height: 16px;
-		};
-		
-		input[type=submit] {
-			text-align: center;
-			margin-top: 20px;
-			margin-bottom: 20px;
-			color: black;
-			width: 30%;
-		};
-
-	};
-
-	#footer {
-		width: 100%;
-		height: 40px;
-		background-color: rgba(255,255,255,0.9);
-		position: fixed;
-		bottom: 0;
-
-		h5 {
-			font-size: 16px;
-			letter-spacing: 0.1em;
-			color: black;
-		};
+		color: black;
 
 		a {
 			color: red;
 		};
 
-		form {
-			display: inline-block;
+		a:hover {
+			color: red;
 		};
 
-		input[type=submit] {
-			font-size: 16px;
-			letter-spacing: 0.1em;
+		a:visited {
 			color: red;
-			border: none;
-			background: none;
 		};
 
 	};
+};
 
-	#about {
-		width: 50%;
-		margin-top: 50px;
-		margin-left: auto;
-		margin-right: auto;
-		margin-bottom: 20px;
-		text-align: left;
-		font-size: 18px;
-		background-color: rgba(255,255,255,0.9);
-		padding: 20px;
+#header {
+	width: 100%;
+	border: 0;
+	background-color: rgba(255,255,255,0.9);
+	position: absolute;
+	top: 0;
 
-		#tagline {
-			font-size: 16px;
-			font-style: italic;
-			text-align: center;
-			color: red;
-		};
-
-		p {
-			font-family: 'Arapey', serif;
-		};
-
-		#signature {
-			font-family: 'Cinzel', serif;
-			font-size: 18px;
-			color: red;
-		};
-
-		h2 {
-			margin-top: 5px;
-			margin-bottom: 15px;
-			line-height: 20px;
-			color: red;
-			text-align: center;
-		};
-
-		a {
-			color: red;
-		};
+	h1 {
+		line-height: 50px;
+		font-size: 48px;
+		letter-spacing: 0.2em;
 	};
 
-	.login {
-		width: 30%;
-		margin-top: 150px;
-		margin-left: auto;
-		margin-right: auto;
-		margin-bottom: 20px;
-		text-align: center;
-		font-size: 18px;
-		background-color: rgba(255,255,255,0.9);
-		padding: 20px;
-
-		label {
-			letter-spacing: 0.1em;
-			color: red;
-		};
-
-		input[type=text] {
-			font-family: Courier;
-			width: 90%;
-		};
-
-		input[type=password] {
-			font-family: Courier;
-			width: 90%;
-		};
-
-		input[type=submit] {
-			margin-top: 10px;
-			color: black;
-			width: 25%;
-		};
-
-		p {
-			margin-top: 20px;
-			margin-bottom: 10px;
-			font-size: 12px;
-			color: black;
-		};
-	};
-
-	#manage-cat-keys {
-		width: 25%;
-		height: 600px;
-		float: left;
-		margin-top: 100px;
-		margin-left: 2%;
-		margin-right: 0;
-		background-color: rgba(255,255,255,0.9);
-
-		h4 {
-			color: black;
-			letter-spacing: 0.1em;
-		};
-
-		#cat-list {
-			width: 95%;
-			height: 460px;	
-			margin-bottom: 10px;
-			text-align: left;
-			overflow: scroll;
-		};
-
-		#key-list {
-			width: 95%;
-			height: 460px;	
-			margin-bottom: 10px;
-			text-align: left;
-			overflow: scroll;
-		};
-
-		input[type=text] {
-			width: 65%;
-			float: left;
-			margin-left: 10px;
-			margin-bottom: 10px;
-			font-family: Courier;
-		};
-
-		input[type=submit] {
-			width: 25%;
-			float: left;
-			font-size: 12px;
-			margin-left: 10px;
-			margin-bottom: 5px;
-		};
-
-		input[type=submit].delete-cat {
-			width: 25%;
-			float: left;
-			color: red;
-			float: center;
-			font-size: 12px;
-			margin-left: 10px;
-			margin-bottom: 10px;
-		};
-
-		input[type=submit].delete-key {
-			width: 25%;
-			float: left;
-			color: red;
-			float: center;
-			font-size: 12px;
-			margin-left: 10px;
-			margin-bottom: 10px;
-		};
-
-		#add-key-cat {
-			width: 95%;
-			height: 75px;
-			float: center;
-			margin-left: auto;
-			margin-right: auto;
-			border: solid black 1px;
-		};
-
-	};
-
-	#manage-items {
-		width: 40%;
-		height: 185px;
-		float: left;
-		margin-top: 100px;
-		margin-left: 2%;
-		background-color: rgba(255,255,255,0.9);
-
-		h4 {
-			color: black;
-			letter-spacing: 0.1em;
-		};
-
-		#find-item {
-			label {
-				margin-right: 5px;
-			}
-			input[type=text] {
-				font-family: 'Courier';
-			};
-		};
-
-	};
-
-	#admin-profile {
-		width: 40%;
-		height: 150px;
-		float: left;
-		margin-top: 20px;
-		margin-left: 2%;
-		background-color: rgba(255,255,255,0.9);
-
-		h4 {
-			color: black;
-			letter-spacing: 0.1em;
-		};
-	};
-
-	#google-analytics {
-		width: 40%;
-		height: 225px;
-		float: left;
-		margin-top: 20px;
-		margin-left: 2%;
-		background-color: rgba(255,255,255,0.9);
-
-		h4 {
-			color: black;
-			letter-spacing: 0.1em;
-		};
-	};
-
-	#error {
-		width: 80%;
-		margin-top: 50px;
-		margin-left: auto;
-		margin-right: auto;
-		margin-bottom: 20px;
-		text-align: center;
-		font-size: 18px;
-		background-color: rgba(255,255,255,0.9);
-		padding: 20px;
+	h3 { 
+		line-height: 20px;
+		font-size: 20px;
+		color: red;
+		letter-spacing: 0.2em;
 	};
 
 };
 
+#categories {
+	width: 25%;
+	min-width: 300px;
+	height: 440px;
+	float: left;
+	margin-top: 170px;
+	margin-left: 16%;
+	padding-bottom: 20px;
+	background-color: rgba(255,255,255,0.9);
 
+	h5 {
+		line-height: 40px;
+		font-size: 16px;
+		color: red;
+		font-weight: 700;
+		letter-spacing: 0.075em;
+	};
 
+	#cat-list {
+		width: 90%;
+		margin-left: auto;
+		margin-right: auto;
+		height: 360px;
+		overflow: scroll;
+	};
 
+	p {
+		font-size: 16px;
+		letter-spacing: 0.075em;
 
+		a {
+			color: black;
+		};
+
+	};
+
+};
+
+#keywords {
+	width: 25%;
+	min-width: 300px;
+	height: 440px;
+	float: right;
+	margin-top: 170px;
+	margin-right: 16%;
+	background-color: rgba(255,255,255,0.9);
+	text-align: center;
+
+	h5 {
+		text-align: center;
+		line-height: 40px;
+		font-size: 16px;
+		color: red;
+		font-weight: 700;
+		letter-spacing: 0.075em;
+	};
+
+	#key-list {
+		width: 90%;
+		text-align: left;
+		margin-left: auto;
+		margin-right: auto;
+		height: 320px;
+		overflow: scroll;
+	};
+
+	input[type=checkbox] {
+		margin-left: 20%;
+		text-align: left;
+		height: 16px;
+	};
+	
+	input[type=submit] {
+		text-align: center;
+		margin-top: 20px;
+		margin-bottom: 20px;
+		color: black;
+		width: 30%;
+	};
+
+};
+
+#footer {
+	width: 100%;
+	min-height: 40px;
+	background-color: rgba(255,255,255,0.9);
+	position: fixed;
+	bottom: 0;
+
+	h5 {
+		font-size: 16px;
+		letter-spacing: 0.1em;
+		color: black;
+	};
+
+	a {
+		color: red;
+	};
+
+	form {
+		display: inline-block;
+	};
+
+	input[type=submit] {
+		font-size: 16px;
+		letter-spacing: 0.1em;
+		color: red;
+		border: none;
+		background: none;
+	};
+
+};
+
+#about {
+	width: 50%;
+	margin-top: 50px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 20px;
+	text-align: left;
+	font-size: 18px;
+	background-color: rgba(255,255,255,0.9);
+	padding: 20px;
+
+	#tagline {
+		font-size: 16px;
+		font-style: italic;
+		text-align: center;
+		color: red;
+	};
+
+	p {
+		font-family: 'Arapey', serif;
+	};
+
+	#signature {
+		font-family: 'Cinzel', serif;
+		font-size: 18px;
+		color: red;
+	};
+
+	h2 {
+		margin-top: 5px;
+		margin-bottom: 15px;
+		line-height: 20px;
+		color: red;
+		text-align: center;
+	};
+
+	a {
+		color: red;
+	};
+};
+
+.login {
+	width: 30%;
+	margin-top: 150px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 20px;
+	text-align: center;
+	font-size: 18px;
+	background-color: rgba(255,255,255,0.9);
+	padding: 20px;
+
+	label {
+		letter-spacing: 0.1em;
+		color: red;
+	};
+
+	input[type=text] {
+		font-family: Courier;
+		width: 90%;
+	};
+
+	input[type=password] {
+		font-family: Courier;
+		width: 90%;
+	};
+
+	input[type=submit] {
+		margin-top: 10px;
+		color: black;
+		width: 25%;
+	};
+
+	p {
+		margin-top: 20px;
+		margin-bottom: 10px;
+		font-size: 12px;
+		color: black;
+	};
+};
+
+#manage-cat-keys {
+	width: 25%;
+	height: 600px;
+	float: left;
+	margin-top: 100px;
+	margin-left: 2%;
+	margin-right: 0;
+	background-color: rgba(255,255,255,0.9);
+
+	h4 {
+		color: black;
+		letter-spacing: 0.1em;
+	};
+
+	#cat-list {
+		width: 95%;
+		height: 460px;	
+		margin-bottom: 10px;
+		text-align: left;
+		overflow: scroll;
+	};
+
+	#key-list {
+		width: 95%;
+		height: 460px;	
+		margin-bottom: 10px;
+		text-align: left;
+		overflow: scroll;
+	};
+
+	input[type=text] {
+		width: 65%;
+		float: left;
+		margin-left: 10px;
+		margin-bottom: 10px;
+		font-family: Courier;
+	};
+
+	input[type=submit] {
+		width: 25%;
+		float: left;
+		font-size: 12px;
+		margin-left: 10px;
+		margin-bottom: 5px;
+	};
+
+	input[type=submit].delete-cat {
+		width: 25%;
+		float: left;
+		color: red;
+		float: center;
+		font-size: 12px;
+		margin-left: 10px;
+		margin-bottom: 10px;
+	};
+
+	input[type=submit].delete-key {
+		width: 25%;
+		float: left;
+		color: red;
+		float: center;
+		font-size: 12px;
+		margin-left: 10px;
+		margin-bottom: 10px;
+	};
+
+	#add-key-cat {
+		width: 95%;
+		height: 75px;
+		float: center;
+		margin-left: auto;
+		margin-right: auto;
+		border: solid black 1px;
+	};
+
+};
+
+#manage-items {
+	width: 40%;
+	height: 185px;
+	float: left;
+	margin-top: 100px;
+	margin-left: 2%;
+	background-color: rgba(255,255,255,0.9);
+
+	h4 {
+		color: black;
+		letter-spacing: 0.1em;
+	};
+
+	#find-item {
+		label {
+			margin-right: 5px;
+		}
+		input[type=text] {
+			font-family: 'Courier';
+		};
+	};
+
+};
+
+#admin-profile {
+	width: 40%;
+	height: 150px;
+	float: left;
+	margin-top: 20px;
+	margin-left: 2%;
+	background-color: rgba(255,255,255,0.9);
+
+	h4 {
+		color: black;
+		letter-spacing: 0.1em;
+	};
+};
+
+#google-analytics {
+	width: 40%;
+	height: 225px;
+	float: left;
+	margin-top: 20px;
+	margin-left: 2%;
+	background-color: rgba(255,255,255,0.9);
+
+	h4 {
+		color: black;
+		letter-spacing: 0.1em;
+	};
+};
+
+#error {
+	width: 80%;
+	margin-top: 50px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 20px;
+	text-align: center;
+	font-size: 18px;
+	background-color: rgba(255,255,255,0.9);
+	padding: 20px;
+};
 
 
 /*SMALL MEDIA
 ====================================================================*/
 
-@media (max-width: 770px) {
-
-	body.welcome {
-		background-image: url('http://www.marianiforos.com/homepic5.jpg');
-		background-repeat: repeat;
-		background-size: 100%;
-		font-family: 'Cinzel', serif;
-		text-align: center;
-
-		.topnav {
-			font-size: 16px;
-			line-height: 20px;
-			text-align: center;
-
-			a {
-				color: white;
-			};
-
-			a:hover {
-				color: white;
-			};
-
-			a:visited {
-				color: white;
-			};
-		};
-	};
-
-	#header {
-		width: 100%;
-		border: 0;
-		height: 150px;
-		background-color: rgba(255,255,255,0.9);
-		position: absolute;
-		top: 0;
-
-		h1 {
-			line-height: 40px;
-			font-size: 36px;
-			letter-spacing: 0.1em;
-		};
-
-		h3 { 
-			line-height: 20px;
-			font-size: 16px;
-			color: red;	
-			letter-spacing: 0.05em;
-
-		};
-
-	};
+@media (max-width: 1000px) {
 
 	#categories {
 		width: 80%;
 		height: 440px;
 		float: center;
-		margin-top: 170px;
-		margin-left: auto;
+		margin-left: 10%;
 		margin-right: auto;
-		padding-bottom: 20px;
-		background-color: rgba(255,255,255,0.9);
-
-		h5 {
-			line-height: 40px;
-			font-size: 16px;
-			color: red;
-			font-weight: 700;
-			letter-spacing: 0.075em;
-		};
-
-		#cat-list {
-			width: 90%;
-			margin-left: auto;
-			margin-right: auto;
-			height: 360px;
-			overflow: scroll;
-		};
-
-		p {
-			font-size: 16px;
-			letter-spacing: 0.075em;
-
-			a {
-				color: black;
-			};
-
-		};
-
 	};
 
 	#keywords {
@@ -506,148 +419,15 @@
 		height: 440px;
 		float: center;
 		margin-top: 20px;
-		margin-left: auto;
+		margin-left: 10%;
 		margin-right: auto;
-		background-color: rgba(255,255,255,0.9);
-		text-align: center;
-
-		h5 {
-			text-align: center;
-			line-height: 40px;
-			font-size: 16px;
-			color: red;
-			font-weight: 700;
-			letter-spacing: 0.075em;
-		};
-
-		#key-list {
-			width: 90%;
-			text-align: left;
-			margin-left: auto;
-			margin-right: auto;
-			height: 320px;
-			overflow: scroll;
-		};
-
-		input[type=checkbox] {
-			margin-left: 20%;
-			text-align: left;
-			height: 16px;
-		};
-		
-		input[type=submit] {
-			text-align: center;
-			margin-top: 20px;
-			margin-bottom: 20px;
-			color: black;
-			width: 30%;
-		};
-
 	};
 
 	#footer {
 		width: 100%;
-		height: 40px;
-		margin-top: 20px;
+		height: 200px;
 		background-color: rgba(255,255,255,0.9);
-
-		h5 {
-			line-height: 30px;
-			font-size: 16px;
-			letter-spacing: 0.1em;
-			color: black;
-		};
-
-		a {
-			color: red;
-		};
-
-		form {
-			display: inline-block;
-		};
-
-		input[type=submit] {
-			font-size: 16px;
-			letter-spacing: 0.1em;
-			color: red;
-			border: none;
-			background: none;
-		};
-	};
-
-	#about {
-		width: 90%;
-		margin-top: 30px;
-		margin-left: auto;
-		margin-right: auto;
-		margin-bottom: 20px;
-		text-align: left;
-		font-size: 18px;
-		background-color: rgba(255,255,255,0.9);
-		padding: 10px;
-
-		p {
-			font-family: 'Arapey', serif;
-		};
-
-		#signature {
-			font-family: 'Cinzel', serif;
-			font-size: 18px;
-			color: red;
-		};
-
-		h2 {
-			margin-top: 5px;
-			margin-bottom: 20px;
-			line-height: 20px;
-			color: red;
-			text-align: center;
-		};
-
-		a {
-			color: red;
-		};
-
-	};
-
-	#login {
-		width: 90%;
-		margin-top: 50px;
-		margin-left: auto;
-		margin-right: auto;
-		margin-bottom: 20px;
-		text-align: center;
-		font-size: 18px;
-		background-color: rgba(255,255,255,0.9);
-		padding: 20px;
-
-		label {
-			letter-spacing: 0.1em;
-			color: red;
-		};
-
-		input[type=text] {
-			font-family: Courier;
-			width: 90%;
-		};
-
-		input[type=password] {
-			font-family: Courier;
-			width: 90%;
-		};
-
-		input[type=submit] {
-			margin-top: 10px;
-			color: black;
-			width: 25%;
-		};
-
-		p {
-			margin-top: 20px;
-			margin-bottom: 10px;
-			font-size: 12px;
-			color: black;
-		};
+		position: fixed;
 	};
 
 };
