--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,5 @@
+$bg-color: rgba(255,255,255,0.9);
+
 body.welcome {
 	background-image: url("https://s3.amazonaws.com/maria-niforos-antiques/background.jpg");
 	background-repeat: no-repeat;
@@ -46,7 +48,7 @@ body.welcome {
 #header {
 	width: 100%;
 	border: 0;
-	background-color: rgba(255,255,255,0.9);
+	background-color: $bg-color;
 	position: absolute;
 	top: 0;
 
@@ -73,7 +75,7 @@ body.welcome {
 	margin-top: 170px;
 	margin-left: 16%;
 	padding-bottom: 20px;
-	background-color: rgba(255,255,255,0.9);
+	background-color: $bg-color;
 
 	h5 {
 		line-height: 40px;
@@ -110,7 +112,7 @@ body.welcome {
 	float: right;
 	margin-top: 170px;
 	margin-right: 16%;
-	background-color: rgba(255,255,255,0.9);
+	background-color: $bg-color;
 	text-align: center;
 
 	h5 {
@@ -150,7 +152,7 @@ body.welcome {
 #footer {
 	width: 100%;
 	min-height: 40px;
-	background-color: rgba(255,255,255,0.9);
+	background-color: $bg-color;
 	position: fixed;
 	bottom: 0;
 
@@ -186,7 +188,7 @@ body.welcome {
 	margin-bottom: 20px;
 	text-align: left;
 	font-size: 18px;
-	background-color: rgba(255,255,255,0.9);
+	background-color: $bg-color;
 	padding: 20px;
 
 	#tagline {
@@ -227,7 +229,7 @@ body.welcome {
 	margin-bottom: 20px;
 	text-align: center;
 	font-size: 18px;
-	background-color: rgba(255,255,255,0.9);
+	background-color: $bg-color;
 	padding: 20px;
 
 	label {
@@ -266,7 +268,7 @@ body.welcome {
 	margin-top: 100px;
 	margin-left: 2%;
 	margin-right: 0;
-	background-color: rgba(255,255,255,0.9);
+	background-color: $bg-color;
 
 	h4 {
 		color: black;
@@ -342,7 +344,7 @@ body.welcome {
 	float: left;
 	margin-top: 100px;
 	margin-left: 2%;
-	background-color: rgba(255,255,255,0.9);
+	background-color: $bg-color;
 
 	h4 {
 		color: black;
@@ -366,7 +368,7 @@ body.welcome {
 	float: left;
 	margin-top: 20px;
 	margin-left: 2%;
-	background-color: rgba(255,255,255,0.9);
+	background-color: $bg-color;
 
 	h4 {
 		color: black;
@@ -380,7 +382,7 @@ body.welcome {
 	float: left;
 	margin-top: 20px;
 	margin-left: 2%;
-	background-color: rgba(255,255,255,0.9);
+	background-color: $bg-color;
 
 	h4 {
 		color: black;
@@ -396,7 +398,7 @@ body.welcome {
 	margin-bottom: 20px;
 	text-align: center;
 	font-size: 18px;
-	background-color: rgba(255,255,255,0.9);
+	background-color: $bg-color;
 	padding: 20px;
 };
 
@@ -404,7 +406,7 @@ body.welcome {
 /*SMALL MEDIA
 ====================================================================*/
 
-@media (max-width: 1000px) {
+@media (max-width: 770px) {
 
 	#categories {
 		width: 80%;
@@ -426,7 +428,7 @@ body.welcome {
 	#footer {
 		width: 100%;
 		height: 200px;
-		background-color: rgba(255,255,255,0.9);
+		background-color: $bg-color;
 		position: fixed;
 	};
 
