--- a/app/views/welcome/admin.html.erb
+++ b/app/views/welcome/admin.html.erb
@@ -7,7 +7,7 @@
 	</div>
 <% else %>
 	<div id="header">
-		<h5 class="topnav" id="admin">You are logged in as: <%= session[:user_name] %> | <a href="/">HOME</a> | <a href="/users/<%= session[:user_id] %>">MANAGE PROFILE</a></h5>
+		<h5 class="topnav" id="admin">You are logged in as: <%= session[:user_name] %> | <a href="/">HOME</a></h5>
 
 		<h3 id="admin">ADMIN CENTER</h3>
 	</div>
