bug related to new user create fixed

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -39,7 +39,7 @@
 			<%= f.radio_button(:is_active, "false") %>
 			<%= f.label(:is_active, "No", {:class => "short"}) %><br>
 			
-			<div id="submit"><%= f.submit "Create", {:class => "update-user"}  %></div>
+			<div id="submit"><%= f.submit "Create", {:class => "create-user"}  %></div>
 		<% end %>
 
 	</div>
