removed search box from main screen

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -20,7 +20,7 @@
 
 </div>
 
-<div id="keywords">
+<!-- <div id="keywords">
 
 	<h5>Search</h5>
 
@@ -36,8 +36,7 @@
 	  <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>" />
 	</form> 
 
-
-</div>
+</div> -->
 
 <div id="footer">
 	<% if (session[:user_id] == nil) %>
