fixed password change bug

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -53,8 +53,8 @@
 
 		  <%= hidden_field(:user, :email, :value => @user.email) %>
 
-				<%= f.label :password %>
-			  <%= f.password_field(:password, :class => "pass") %>
+				<%= f.label :old_password %>
+			  <%= f.password_field(:old_password, :class => "pass") %>
 		    <%= f.label :new_password %>
 		    <%= f.password_field(:new_password, :class => "newpass") %>
 		  
