--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -131,57 +131,82 @@ h1.headline {
 	padding: 10px;
 
 	#submit {
+		width: 100%;
+		height: 40px;
+		float: left;
+		margin-top: 5px;
+		padding: 0;
 		text-align: center;
 	};
 
 	label {
 		width: 25%;
 		color: red;
+		height: 25px;
+		line-height: 25px;
+		float: left;
+		margin-bottom: 10px;
 		margin-right: 5px;
 		text-align: right;
 	};
 
+	label.short {
+		width: 30%;	
+	};
+
+	label.very_short {
+		width: 5%;
+		text-align: left;
+	};	
+
+	label.large {
+		height: 100px;
+	};
+
 	input[type=text] {
-		width: 70%;
-		margin-top: 5px;
+		width: 73%;
+		height: 25px;
+		float: left;
+		margin-bottom: 10px;
 		font-family: 'Courier';
+	};
+
+	input[type=text].textbox {
+		width: 73%;
+		float: left;
+		height: 100px;
+		margin-bottom: 10px;
 	};
 
 	input[type=text].short {
 		width: 30%;
-		margin-top: 5px;
+		float: left;
+		margin-right: 43%;
+		margin-bottom: 10px;
 		font-family: 'Courier';
 	};
 
 	input[type=date] {
 		width: 30%;
-		margin-top: 5px;
+		float: left;
+		height: 25px;
+		margin-right: 43%;
+		margin-bottom: 10px;
 		font-family: 'Courier';
-	};
-
-	textarea {
-		width: 70%;
-		margin-top: 5px;
-		height: 100px;
-		overflow: scroll;
-		font-family: 'Courier';
-		padding: 5px;
 	};
 
 	input[type=submit] {
-		margin-top: 20px;
+		margin-top: 5px;
 		text-align: center;
 		width: 75px;
 	};
 
-	input[type=radiobutton] {
-		width: 10px;
-		margin-top: 5px;
+	input[type=radio] {
+		width: 20px;
+		line-height: 10px;
+		float: left;
+		margin-bottom: 10px;
 	};
-
-	.short {
-		width: 30px;
-	};	
 
 };
 
@@ -197,7 +222,10 @@ h1.headline {
 	padding: 10px;
 
 	#submit {
+		width: 100%;
+		float: left;
 		text-align: center;
+		border: solid green 1px;
 	}
 
 	label {
