--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -13,31 +13,30 @@
 
 		<%= form_for @item, url: {action: "create"} do |f| %>
 			
-			<%= f.label :code, "Code" %>
-			<%= f.text_field :code %><br>
-			<%= f.label :caption, "Caption" %>
-			<%= f.text_field :caption %><br>
+			<%= f.label :code, "* Code" %>
+			<%= f.text_field :code %>
+			<%= f.label :caption, "* Caption" %>
+			<%= f.text_field :caption %>
 			<%= f.label :condition, "Condition" %>
-			<%= f.text_field :condition %><br>
+			<%= f.text_field :condition %>
 			<%= f.label :measurements, "Measurements" %>
-			<%= f.text_field :measurements %><br>
+			<%= f.text_field :measurements %>
 			<%= f.label :date_acquired, "Date Acquired" %>
-			<%= f.date_field :date_acquired %><br>
+			<%= f.date_field :date_acquired %>
 			<%= f.label :date_sold, "Date Sold" %>
-			<%= f.date_field :date_sold %><br>
+			<%= f.date_field :date_sold %>
 			<%= f.label :purchase_price, "Purchase Price" %>
-			<%= f.text_field :purchase_price, {:class => "short"} %><br>
+			<%= f.text_field :purchase_price, {:class => "short"} %>
 			<%= f.label :selling_price, "Selling Price" %>
-			<%= f.text_field :selling_price, {:class => "short"} %><br>
-			<%= f.label :description, "Description" %>
-			<%= f.text_area :description %><br>
+			<%= f.text_field :selling_price, {:class => "short"} %>
+			<%= f.label :description, "* Description", {:class => "large"} %>
+			<%= f.text_field :description, {:class => "textbox"} %>
 
 			<%= f.label :is_available, "Item Available?" %>
-			<%= f.radio_button(:is_available, "true") %>
-			<%= f.label(:is_available, "Yes", {:class => "short"}) %>
-			<%= f.radio_button(:is_available, "false") %>
-			<%= f.label(:is_available, "No", {:class => "short"}) %><br>
-			
+			<%= f.radio_button(:is_available, "true", {:class => "very_short"}) %>
+			<%= f.label(:is_available, "Yes", {:class => "very_short"}) %>
+			<%= f.radio_button(:is_available, "false", {:class => "very_short"}) %>
+			<%= f.label(:is_available, "No", {:class => "very_short"}) %><br>
 			
 			<div id="submit"><%= f.submit "Create", {:class => "button"}  %></div>
 		<% end %>
