--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -120,7 +120,7 @@ h1.headline {
 	};
 };
 
-#new-item-form {
+.item-form {
 	width: 40%;
 	height: 500px;
 	margin-top: 20px;
@@ -129,15 +129,6 @@ h1.headline {
 	text-align: left;	
 	border: solid black 1px;
 	padding: 10px;
-
-	#submit {
-		width: 100%;
-		height: 40px;
-		float: left;
-		margin-top: 5px;
-		padding: 0;
-		text-align: center;
-	};
 
 	label {
 		width: 25%;
@@ -171,11 +162,13 @@ h1.headline {
 		font-family: 'Courier';
 	};
 
-	input[type=text].textbox {
+	textarea {
 		width: 73%;
 		float: left;
 		height: 100px;
+		multiline: true;
 		margin-bottom: 10px;
+		font-family: 'Courier';
 	};
 
 	input[type=text].short {
@@ -195,17 +188,26 @@ h1.headline {
 		font-family: 'Courier';
 	};
 
-	input[type=submit] {
-		margin-top: 5px;
-		text-align: center;
-		width: 75px;
-	};
-
 	input[type=radio] {
 		width: 20px;
 		line-height: 10px;
 		float: left;
 		margin-bottom: 10px;
+	};
+
+	#submit {
+		width: 100%;
+		height: 40px;
+		float: left;
+		margin-top: 5px;
+		padding: 0;
+		text-align: center;
+	};
+
+	input[type=submit] {
+		margin-top: 5px;
+		text-align: center;
+		width: 75px;
 	};
 
 };
@@ -221,68 +223,11 @@ h1.headline {
 	border: solid black 1px;
 	padding: 10px;
 
-	#submit {
-		width: 100%;
-		float: left;
-		text-align: center;
-		border: solid green 1px;
-	}
-
-	label {
-		width: 25%;
-		color: red;
-		margin-right: 5px;
-		text-align: right;
-	};
-
-	input[type=text] {
-		width: 70%;
-		margin-top: 5px;
-		font-family: 'Courier';
-	};
-
-	input[type=text].short {
-		width: 30%;
-		margin-top: 5px;
-		font-family: 'Courier';
-	};
-
-	input[type=date] {
-		width: 30%;
-		margin-top: 5px;
-		font-family: 'Courier';
-	};
-
-	textarea {
-		width: 70%;
-		margin-top: 5px;
-		height: 100px;
-		overflow: scroll;
-		font-family: 'Courier';
-		padding: 5px;
-	};
-
-	input[type=submit] {
-		margin-top: 20px;
-		text-align: center;
-		width: 75px;
-	};
-
-	input[type=radiobutton] {
-		width: 10px;
-		margin-top: 5px;
-	};
-
-	.short {
-		width: 30px;
-		color: 'green';	
-	};	
-
 	input[type=submit].delete {
 		width: 120px;
 		float: right;
 		color: red;
-		margin-top: -25px;
+		margin-top: -34px;
 		margin-right: 20px;
 	}
 
