--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -10,7 +10,7 @@
 
 	<div id="cat-list">
 
-		<p><a href="/items">ALL ITEMS</a></p>
+		<!-- <p><a href="/items">ALL ITEMS</a></p> -->
 
 		<% @categories.each do |category| %>
 			<p><a href="/items?category_id=<%= category.id %>"><%= category.name.upcase %></a></p>
