--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -67,6 +67,15 @@ body.welcome {
 
 };
 
+.category {
+	width: 95%;
+	height: 60px;
+	margin-left: 10px;
+	margin-bottom: 5px;
+	padding: 5px;
+	border: solid gray 1px;
+};
+
 #categories {
 	width: 20%;
 	min-width: 200px;
@@ -91,6 +100,7 @@ body.welcome {
 		margin-right: auto;
 		height: 360px;
 		overflow: scroll;
+
 	};
 
 	p {
