implemented drag and drop ordering for categories and keywords

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -115,6 +115,15 @@ body.welcome {
 
 };
 
+.keyword {
+	width: 95%;
+	height: 60px;
+	margin-left: 10px;
+	margin-bottom: 5px;
+	padding: 5px;
+	border: solid gray 1px;
+};
+
 #keywords {
 	width: 20%;
 	min-width: 200px;
