--- a/app/views/welcome/admin.html.erb
+++ b/app/views/welcome/admin.html.erb
@@ -1,4 +1,4 @@
-<body class="welcome" id="admin">
+<body class="admin" id="admin">
 
 <% if (session[:is_admin] != 'true') %>
 	<div id="header">
@@ -29,10 +29,6 @@
 					<input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>" />
 				</form>
 			</div>
-		</script>
-
-		<script type="text/javascript">
-		
 		</script>
 
 		<div id="cat-list">
