--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -5,7 +5,7 @@
 	<h4>Please <a href="/login">login</a> to continue</h4>
 <% else %>
 
-	<h5 class="topnav">You are logged in as: <%= session[:user_name] %> | <a href="/">HOME</a> | <a href="/items">BACK TO ITEMS</a> | <a href="/admin">ADMIN CENTER</a></h5>
+	<h5 class="topnav">You are logged in as: <%= session[:user_name] %> | <a href="/">HOME</a> | <a href="/admin">ADMIN CENTER</a></h5>
 
 	<h1 class="headline">NEW ITEM</h1>
 
