--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,11 +1,6 @@
 <body class="item">
-<% if (session[:is_admin] == 'true') %>
 
-	<h5 class="topnav">You are logged in as: <%= session[:user_name] %> | <a href="/">HOME</a> | <a href="/items/<%= @item.id %>/edit">EDIT ITEM</a> | <a href="/admin">ADMIN CENTER</a></h5>
-
-<% else %>
-	<h5 class="topnav"><a href="/">HOME</a> | <a href="/items">BACK TO ITEMS</a></h5>
-<% end %>
+	<h5 class="topnav">You are logged in as: <%= session[:user_name] %> | <a href="/">HOME</a> | <% if (@category) %><a href="/categories/<%= @category.id %>/items">BACK TO ITEMS</a> <% else %><a href="/items">BACK TO ITEMS</a><% end %><% if (session[:is_admin] == 'true') %> | <a href="/items/<%= @item.id %>/edit">EDIT ITEM</a> | <a href="/admin">ADMIN CENTER</a></h5><% end %>
 
 <h2><%= @item.caption %></h2>
 <h4><%= @item.code %></h4>
