minor adjustment to items index page

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -22,7 +22,7 @@
 <% if (@items.count == 0) %>
 	<br>
 	<h4>Sorry, there were no items found.</h4>
-	<h4>Please try another search or category.</h4>
+	<h4>Please try another category.</h4>
 <% end %>
 
 <div id="results">
