--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -21,76 +21,10 @@ body.item {
 		};
 
 	};
-};
-
-a {
-		color: red;
-	};
-
-	a:hover {
-		color: red;
-	};
-
-	a:visited {
-		color: red;
-	};
-
-h1.headline {
-	margin-top: 30px;
-	line-height: 50px;
-	font-size: 48px;
-	letter-spacing: 0.2em;
-};
-
-.key {
-	color: red;
-	padding: 0 2px 0 2px;
-	margin-right: 5px;
-	border: solid red 1px;
-};
-
-.preview {
-	width: 80%;
-	height: 400px;
-	margin-top: 40px;
-	margin-left: auto;
-	margin-right: auto;
-	padding: 10px;
-}
-
-.thumb {
-	min-width: 450px;
-	height: 400px;
-	float: left;
-	margin-right: 40px;
-
-	img {
-		border: solid black 1px;
-	};
-};
-
-.no-image {
-	width: 40%;
-	height: 400px;
-	line-height: 400px;
-	display: block;
-	float: left;
-	font-size: 24px;
-	text-align: center;
-	margin-right: 40px;
-	background-color: rgba(200,200,200,1);
-};
-
-.blurb {
-	float: left;
-	width: 50%;
-	height: 400px;
-	text-align: left;
-	oveflow: scroll;
 
 	a {
-		color: red;
-	}
+			color: red;
+		};
 
 	a:hover {
 		color: red;
@@ -100,15 +34,14 @@ h1.headline {
 		color: red;
 	};
 
-	p {
-		font-size: 18px;
-		font-family: 'Arapey', serif;
+	h1.headline {
+		margin-top: 30px;
+		line-height: 50px;
+		font-size: 48px;
+		letter-spacing: 0.2em;
 	};
 
-	.cat {
-		color: black;
-		padding: 0 2px 0 2px;
-		margin-right: 5px;
+	hr {
 		border: solid black 1px;
 	};
 
@@ -118,242 +51,311 @@ h1.headline {
 		margin-right: 5px;
 		border: solid red 1px;
 	};
-};
 
-.item-form {
-	width: 40%;
-	height: 500px;
-	margin-top: 20px;
-	margin-left: auto;
-	margin-right: auto;
-	text-align: left;	
-	border: solid black 1px;
-	padding: 10px;
+	.preview {
+		width: 80%;
+		height: 400px;
+		margin-top: 40px;
+		margin-left: auto;
+		margin-right: auto;
+		padding: 10px;
+	}
 
-	label {
-		width: 25%;
-		color: red;
-		height: 25px;
-		line-height: 25px;
+	.thumb {
+		min-width: 450px;
+		height: 400px;
 		float: left;
-		margin-bottom: 10px;
-		margin-right: 5px;
-		text-align: right;
+		margin-right: 40px;
+
+		img {
+			border: solid black 1px;
+		};
 	};
 
-	label.short {
-		width: 30%;	
+	.no-image {
+		width: 40%;
+		height: 400px;
+		line-height: 400px;
+		display: block;
+		float: left;
+		font-size: 24px;
+		text-align: center;
+		margin-right: 40px;
+		background-color: rgba(200,200,200,1);
 	};
 
-	label.very_short {
-		width: 5%;
+	.blurb {
+		float: left;
+		width: 50%;
+		height: 400px;
 		text-align: left;
-	};	
+		oveflow: scroll;
 
-	label.large {
-		height: 100px;
+		a {
+			color: red;
+		}
+
+		a:hover {
+			color: red;
+		};
+
+		a:visited {
+			color: red;
+		};
+
+		p {
+			font-size: 18px;
+			font-family: 'Arapey', serif;
+		};
+
+		.cat {
+			color: black;
+			padding: 0 2px 0 2px;
+			margin-right: 5px;
+			border: solid black 1px;
+		};
+
+		.key {
+			color: red;
+			padding: 0 2px 0 2px;
+			margin-right: 5px;
+			border: solid red 1px;
+		};
 	};
 
-	input[type=text] {
-		width: 73%;
-		height: 25px;
+	.item-form {
+		width: 40%;
+		height: 500px;
+		margin-top: 20px;
+		margin-left: auto;
+		margin-right: auto;
+		text-align: left;	
+		border: solid black 1px;
+		padding: 10px;
+
+		label {
+			width: 25%;
+			color: red;
+			height: 25px;
+			line-height: 25px;
+			float: left;
+			margin-bottom: 10px;
+			margin-right: 5px;
+			text-align: right;
+		};
+
+		label.short {
+			width: 30%;	
+		};
+
+		label.very_short {
+			width: 5%;
+			text-align: left;
+		};	
+
+		label.large {
+			height: 100px;
+		};
+
+		input[type=text] {
+			width: 73%;
+			height: 25px;
+			float: left;
+			margin-bottom: 10px;
+			font-family: 'Courier';
+		};
+
+		textarea {
+			width: 73%;
+			float: left;
+			height: 100px;
+			multiline: true;
+			margin-bottom: 10px;
+			font-family: 'Courier';
+		};
+
+		input[type=text].short {
+			width: 30%;
+			float: left;
+			margin-right: 43%;
+			margin-bottom: 10px;
+			font-family: 'Courier';
+		};
+
+		input[type=date] {
+			width: 30%;
+			float: left;
+			height: 25px;
+			margin-right: 43%;
+			margin-bottom: 10px;
+			font-family: 'Courier';
+		};
+
+		input[type=radio] {
+			width: 20px;
+			line-height: 10px;
+			float: left;
+			margin-bottom: 10px;
+		};
+
+		#submit {
+			width: 100%;
+			height: 40px;
+			float: left;
+			margin-top: 5px;
+			padding: 0;
+			text-align: center;
+		};
+
+		input[type=submit] {
+			margin-top: 5px;
+			text-align: center;
+			width: 75px;
+		};
+
+	};
+
+	.edit-item-form {
+		width: 40%;
+		height: 500px;
 		float: left;
-		margin-bottom: 10px;
-		font-family: 'Courier';
+		margin-top: 20px;
+		margin-left: 100px;
+		margin-right: 0;
+		text-align: left;	
+		border: solid black 1px;
+		padding: 10px;
+
+		input[type=submit].delete {
+			width: 120px;
+			float: right;
+			color: red;
+			margin-top: -34px;
+			margin-right: 20px;
+		}
+
 	};
 
-	textarea {
-		width: 73%;
+	.cat-key-list {
+		width: 70%;
+		float: center;
+		margin-left: auto;
+		margin-right: auto;
+		text-align: left;
+
+		input[type=checkbox] {
+			margin-top: 5px;
+		}
+	}
+
+	#item-cats-keys {
+		width: 20%;
+		height: 500px;
 		float: left;
-		height: 100px;
-		multiline: true;
-		margin-bottom: 10px;
-		font-family: 'Courier';
+		margin-top: 20px;
+		margin-left: 20px;
+		border: solid black 1px;
+
+		h5 {
+			color: red;
+			letter-spacing: 0.1em;
+		}
+
 	};
 
-	input[type=text].short {
+	#item-keys {
+		width: 20%;
+		height: 500px;
+		float: left;
+		margin-top: 20px;
+		margin-left: 20px;
+		border: solid black 1px;
+	}
+
+	#item-description {
+		width: 55%;
+		height: 250px;
+		float: left;
+		margin-top: 20px;
+		margin-left: 5%;
+		padding: 10px;
+		border: solid black 1px;
+		overflow: scroll;
+
+		h4 {
+			color: red;
+			letter-spacing: 0.2em;
+			text-align: center;
+		};
+
+		p {
+			font-family: 'Arapey', serif;
+			font-size: 18px;
+			text-align: left;
+		};
+		
+	};
+
+	#item-details {
 		width: 30%;
-		float: left;
-		margin-right: 43%;
-		margin-bottom: 10px;
-		font-family: 'Courier';
-	};
-
-	input[type=date] {
-		width: 30%;
-		float: left;
-		height: 25px;
-		margin-right: 43%;
-		margin-bottom: 10px;
-		font-family: 'Courier';
-	};
-
-	input[type=radio] {
-		width: 20px;
-		line-height: 10px;
-		float: left;
-		margin-bottom: 10px;
-	};
-
-	#submit {
-		width: 100%;
-		height: 40px;
-		float: left;
-		margin-top: 5px;
-		padding: 0;
-		text-align: center;
-	};
-
-	input[type=submit] {
-		margin-top: 5px;
-		text-align: center;
-		width: 75px;
-	};
-
-};
-
-.edit-item-form {
-	width: 40%;
-	height: 500px;
-	float: left;
-	margin-top: 20px;
-	margin-left: 100px;
-	margin-right: 0;
-	text-align: left;	
-	border: solid black 1px;
-	padding: 10px;
-
-	input[type=submit].delete {
-		width: 120px;
+		height: 250px;
 		float: right;
-		color: red;
-		margin-top: -34px;
-		margin-right: 20px;
-	}
-
-};
-
-.cat-key-list {
-	width: 70%;
-	float: center;
-	margin-left: auto;
-	margin-right: auto;
-	text-align: left;
-
-	input[type=checkbox] {
-		margin-top: 5px;
-	}
-}
-
-#item-cats-keys {
-	width: 20%;
-	height: 500px;
-	float: left;
-	margin-top: 20px;
-	margin-left: 20px;
-	border: solid black 1px;
-
-	h5 {
-		color: red;
-		letter-spacing: 0.1em;
-	}
-
-};
-
-#item-keys {
-	width: 20%;
-	height: 500px;
-	float: left;
-	margin-top: 20px;
-	margin-left: 20px;
-	border: solid black 1px;
-}
-
-#item-description {
-	width: 55%;
-	height: 250px;
-	float: left;
-	margin-top: 20px;
-	margin-left: 5%;
-	padding: 10px;
-	border: solid black 1px;
-	overflow: scroll;
-
-	h4 {
-		color: red;
-		letter-spacing: 0.2em;
-		text-align: center;
-	};
-
-	p {
-		font-family: 'Arapey', serif;
-		font-size: 18px;
+		margin-top: 20px;
+		margin-right: 5%;
+		padding: 10px;
 		text-align: left;
+		border: solid black 1px;
+		overflow: scroll;
+
+		h4 {
+			color: red;
+			letter-spacing: 0.1em;
+			text-align: left;
+		};
+
 	};
-	
-};
 
-#item-details {
-	width: 30%;
-	height: 250px;
-	float: right;
-	margin-top: 20px;
-	margin-right: 5%;
-	padding: 10px;
-	text-align: left;
-	border: solid black 1px;
-	overflow: scroll;
+	#item-thumbs-container {
+		width: 90%;
+		height: 500px;
+		display: inline-block;
+		float: center;
+		margin-top: 20px;
+		margin-left: auto;
+		margin-right: auto;
+		border: solid black 1px;
+		overflow: scroll;
 
-	h4 {
-		color: red;
-		letter-spacing: 0.1em;
+		h4 {
+			color: red;
+			letter-spacing: 0.2em;
+			text-align: center;
+		};
+
+	};
+
+	#item-thumbs {
+		width: 10000px;
+		height: 450px;
+		margin-top: 0;
 		text-align: left;
 	};
 
-};
+	#carousel-override {
+		color: rgba(255,100,100,1);
+		background-color: rgba(255,255,255,0);
+		background-image: none;
+		opacity: 1;
+	};
 
-#item-thumbs-container {
-	width: 90%;
-	height: 500px;
-	display: inline-block;
-	float: center;
-	margin-top: 20px;
-	margin-left: auto;
-	margin-right: auto;
-	border: solid black 1px;
-	overflow: scroll;
-
-	h4 {
-		color: red;
-		letter-spacing: 0.2em;
-		text-align: center;
+	#carousel-override:hover {
+		color: rgba(255,0,0,1);
+		background-color: rgba(255,255,255,0);
+		background-image: none;
+		opacity: 1;
 	};
 
 };
-
-#item-thumbs {
-	width: 10000px;
-	height: 450px;
-	margin-top: 0;
-	text-align: left;
-};
-
-#carousel-override {
-	color: rgba(255,100,100,1);
-	background-color: rgba(255,255,255,0);
-	background-image: none;
-	opacity: 1;
-};
-
-#carousel-override:hover {
-	color: rgba(255,0,0,1);
-	background-color: rgba(255,255,255,0);
-	background-image: none;
-	opacity: 1;
-};
-
-
-
 
 
 
